cabal-version:      3.6
name:               airplane
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Manages seats on an airplane

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-3.0-or-later
author:             Matt Fellenz
maintainer:         mattf53190@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable airplane
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Plane, Util, Matcher

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0, split ^>=0.2.3.4, containers ^>=0.6.5.1
    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options: -W -fllvm -threaded -O
    default-extensions: ImplicitPrelude StarIsType MonomorphismRestriction TraditionalRecordSyntax EmptyDataDecls ForeignFunctionInterface PatternGuards DoAndIfThenElse RelaxedPolyRec BangPatterns BinaryLiterals ConstrainedClassMethods ConstraintKinds DeriveDataTypeable DeriveFoldable DeriveFunctor DeriveGeneric DeriveLift DeriveTraversable EmptyCase EmptyDataDeriving ExistentialQuantification ExplicitForAll FlexibleContexts FlexibleInstances GADTSyntax GeneralisedNewtypeDeriving HexFloatLiterals ImportQualifiedPost InstanceSigs KindSignatures LambdaCase MultiParamTypeClasses MultiWayIf NamedFieldPuns NamedWildCards NumericUnderscores PolyKinds PostfixOperators RankNTypes ScopedTypeVariables StandaloneDeriving StandaloneKindSignatures TupleSections TypeApplications TypeOperators TypeSynonymInstances Safe
